--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,65 +1,4 @@
-# file: postgresql/tasks/configure.yml
-
-- name: PostgreSQL | Drop the data directory | RedHat
-  file:
-    path: "{{ postgresql_data_directory }}"
-    state: absent
-  register: pgdata_dir_remove
-  when: ansible_os_family == "RedHat" and postgresql_cluster_reset
-
-- name: PostgreSQL | Make sure the postgres data directory exists
-  file:
-    path: "{{postgresql_data_directory}}"
-    owner: "{{ postgresql_service_user }}"
-    group: "{{ postgresql_service_group }}"
-    state: directory
-    mode: 0700
-  register: pgdata_dir_exist
-
-- name: PostgreSQL | Ensure the locale is generated | Debian
-  become: yes
-  locale_gen: name="{{ postgresql_locale }}" state=present
-  when: ansible_os_family == "Debian"
-
-- name: PostgreSQL | Ensure the locale is generated | RedHat
-  become: yes
-  command: >
-    localedef -c -i {{ postgresql_locale_parts[0] }} -f {{ postgresql_locale_parts[1] }}
-    {{ postgresql_locale }}
-  changed_when: false
-  when: ansible_os_family == "RedHat"
-
-- name: PostgreSQL | Reset the cluster - drop the existing one | Debian
-  shell: pg_dropcluster --stop {{ postgresql_version }} {{ postgresql_cluster_name }}
-  become: yes
-  become_user: "{{ postgresql_service_user }}"
-  when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
-
-- name: PostgreSQL | Reset the cluster - create a new one (with specified encoding and locale) | Debian
-  shell: >
-    pg_createcluster --start --locale {{ postgresql_locale }}
-    -e {{ postgresql_encoding }} -d {{ postgresql_data_directory }}
-    {{ postgresql_version }} {{ postgresql_cluster_name }}
-  become: yes
-  become_user: "{{ postgresql_service_user }}"
-  when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
-
-- name: PostgreSQL | Check whether the postgres data directory is initialized
-  stat:
-    path: "{{ postgresql_data_directory }}/PG_VERSION"
-  when: ansible_os_family == "RedHat" and not postgresql_cluster_reset
-  register: pgdata_dir_initialized
-
-- name: PostgreSQL | Initialize the database | RedHat
-  command: >
-    {{ postgresql_bin_directory }}/initdb -D {{ postgresql_data_directory }}
-    --locale={{ postgresql_locale }} --encoding={{ postgresql_encoding }}
-  become: yes
-  become_user: "{{ postgresql_service_user }}"
-  when: ansible_os_family == "RedHat" and
-        (postgresql_cluster_reset or
-         pgdata_dir_exist.changed or
-         not pgdata_dir_initialized.stat.exists)
+---
 
 - name: PostgreSQL | Ensure configuration directory exists
   file:
@@ -76,7 +15,8 @@
     owner: "{{ postgresql_service_user }}"
     group: "{{ postgresql_service_group }}"
     mode: 0640
-  register: postgresql_configuration_pt1
+  notify:
+    - restart postgresql
 
 - name: PostgreSQL | Update configuration - pt. 2 (postgresql.conf)
   template:
@@ -86,7 +26,8 @@
     owner: "{{ postgresql_service_user }}"
     group: "{{ postgresql_service_group }}"
     mode: 0640
-  register: postgresql_configuration_pt2
+  notify:
+    - restart postgresql
 
 - name: PostgreSQL | Update configuration - pt. 3 (pgtune)
   become: true
@@ -117,6 +58,8 @@
   when: postgresql_pgtune
   register: postgresql_configuration_pt3
   changed_when: "'_OK_' not in postgresql_configuration_pt3.stdout"
+  notify:
+    - restart postgresql
 
 - name: PostgreSQL | Create folder for additional configuration files
   file:
@@ -126,20 +69,6 @@
     group: "{{ postgresql_service_group }}"
     mode: 0755
 
-- name: PostgreSQL | Ensure the systemd directory for PostgreSQL exists | RedHat
-  file:
-    name: "/etc/systemd/system/postgresql-{{ postgresql_version }}.service.d"
-    state: directory
-    mode: 0755
-  when: ansible_os_family == "RedHat"
-
-- name: PostgreSQL | Use the conf directory when starting the Postgres service | RedHat
-  template:
-    src: etc_systemd_system_postgresql.service.d_custom.conf.j2
-    dest: "/etc/systemd/system/postgresql-{{ postgresql_version }}.service.d/custom.conf"
-  when: ansible_os_family == "RedHat"
-  register: postgresql_systemd_custom_conf
-
 - name: PostgreSQL | Ensure the pid directory for PostgreSQL exists
   file:
     name: "{{ postgresql_pid_directory }}"
@@ -148,8 +77,10 @@
     group: "{{ postgresql_service_group }}"
     mode: u=rwX,g=rwXs,o=rx
 
-- name: PostgreSQL | Restart PostgreSQL
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: restarted
-  when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
+- name: PostgreSQL | Use the conf directory when starting the Postgres service | RedHat
+  template:
+    src: etc_systemd_system_postgresql.service.d_custom.conf.j2
+    dest: "/etc/systemd/system/postgresql-{{ postgresql_version }}.service.d/custom.conf"
+  when: ansible_os_family == "RedHat"
+  notify:
+    - restart postgresql
