--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,10 @@
 - include: extensions.yml
   tags: [postgresql, postgresql-extensions]
 
+- include: reset.yml
+  when: "{{ postgresql_cluster_reset }}"
+  tags: [postgresql, postgresql-reset]
+
 - include: configure.yml
   tags: [postgresql, postgresql-configure]
 
@@ -28,7 +32,3 @@
 
 - include: users_privileges.yml
   tags: [postgresql, postgresql-users]
-
-- include: monit.yml
-  when: monit_protection is defined and monit_protection == true
-  tags: [postgresql, postgresql-monit]
