use intidb to initialize the data dir

--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,4 +1,4 @@
 ---
 postgresql_service_name: "postgresql"
 
-postgresql_bin_directory: /usr/bin
+postgresql_bin_directory: "/usr/lib/postgresql/{{postgresql_version}}/bin"
