--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -64,3 +64,8 @@
     mode: 0700
   register: pgdata_dir_exist
 
+- name: PostgreSQL | Initialize data directory
+  command: "su postgres -c '{{postgresql_bin_directory}}/initdb {{postgresql_data_directory}}'"
+  become: true
+  become_user: root
+  when: "{{pgdata_dir_exist.changed}}"
